--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ img {
 /* ---------------Подвал -------------*/
 
 .footer {
-  width: 1600px;
+  /* width: 1600px; */
   background-color: #2f303a;
   margin-left: auto;
   margin-right: auto;
